@@ -31,6 +31,25 @@ class CDummyCache extends CApplicationComponent implements ICache, ArrayAccess
 	}
 
 	/**
+	 * Retrieves multiple values from cache with the specified keys.
+	 * Some caches (such as memcache, apc) allow retrieving multiple cached values at one time,
+	 * which may improve the performance since it reduces the communication cost.
+	 * In case a cache doesn't support this feature natively, it will be simulated by this method.
+	 * @param array list of keys identifying the cached values
+	 * @return array list of cached values corresponding to the specified keys. The array
+	 * is returned in terms of (key,value) pairs.
+	 * If a value is not cached or expired, the corresponding array value will be false.
+	 * @since 1.0.8
+	 */
+	public function mget($ids)
+	{
+		$results=array();
+		foreach($ids as $id)
+			$results[$id]=false;
+		return $results;
+	}
+
+	/**
 	 * Stores a value identified by a key into cache.
 	 * If the cache already contains such a key, the existing value and
 	 * expiration time will be replaced with the new ones.
